--- a/views/layouts/base.html
+++ b/views/layouts/base.html
@@ -6,16 +6,22 @@
       {% block title%} {% endblock %}
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css">
+    {% block styles %}
+    {% endblock %}
   </head>
   <body>
     <div class="container">
       <a href="/" class="btn btn-link">Home</a>
       <a href="/products" class="btn btn-link">Produtos</a>
+      <a href="/contact" class="btn btn-link">Contato</a>
+      <a href="/artur" class="btn btn-link">Pagina do Artur</a>
+      <div>
       {% block content %}
       {% endblock %}
+      </div>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" charset="utf-8"></script>
-    {% block script %}    
+    {% block script %}
     {% endblock %}
   </body>
 </html>
