--- a/views/product.html
+++ b/views/product.html
@@ -3,7 +3,7 @@
 {% block content %}
   <h1>{{ product.name }}</h1>
   <p>Preço R$ {{ product.price }} </p>
-
+  <button id="addProduct" class="btn btn-danger">Adicionar produto</button> 
 {% endblock %}
 
 {% block title %}
