--- a/views/products.html
+++ b/views/products.html
@@ -1,16 +1,18 @@
 {% extends './layouts/base.html' %}
 
 {% block content %}
-  <h1>Produtos</h1>
+  <h1 class="display-4 text-center">Produtos</h1>
+  <hr />
   <ul class="products">
     {% for item in products %}
     <li>
       <p>{{ item.name }}</p>
-      <p>R$ {{ item.price }}</p>
-      <a href="/product/{{ item.id }}" class="btn btn-primary">Ver mais</a>
+      <p>{{ item.price.toLocaleString('pt-BR', { minimumFractionDigits: 2 , style: 'currency', currency: 'BRL' }) }}</p>
+      <a href="/product/{{ item.id }}" class="btn btn-outline-dark btn-block btn-sm">Ver mais</a>
     </li>
     {% endfor %}
   </ul>
+  <div class="clearfix"></div>
 {% endblock %}
 
 {% block title %}
