--- a/public/styles/products.css
+++ b/public/styles/products.css
@@ -3,5 +3,9 @@
 }
 .products li {
   float: left;
-  margin: 10px 20px;
+  margin-bottom: 20px;
+  padding: 15px;
+  width: 25%;
+  background-color: rgba(0,0,0,0.09);
+  border-right: 15px solid white;
 }
