--- a/views/contact.html
+++ b/views/contact.html
@@ -1,7 +1,8 @@
 {% extends './layouts/base.html' %}
 
 {% block content %}
-  <h1>Contato</h1>
+<h1 class="display-4 text-center">Contato</h1>
+<hr />
   <form>
     <div class="row">
       <div class="col-12">
