--- a/views/product.html
+++ b/views/product.html
@@ -1,9 +1,16 @@
 {% extends './layouts/base.html' %}
 
 {% block content %}
-  <h1>{{ product.name }}</h1>
-  <p>Preço R$ {{ product.price }} </p>
-  <button id="addProduct" class="btn btn-danger">Adicionar produto</button> 
+<div class="p-5 jumbotron mt-4">
+    <h3 class="big float-right">{{ product.price.toLocaleString('pt-BR', { minimumFractionDigits: 2 , style: 'currency', currency: 'BRL' }) }} </h3>
+  <h1 class="display-4">{{ product.name }}</h1>
+  <p clas="small"><strong>Ref: {{ product.id }}</strong></p>
+  <p class="p-3">{{ product.description | striptags(true) | escape | nl2br }}</p>
+  <hr />
+  <button id="addProduct" class="btn float-right btn-danger">Adicionar produto</button>
+  <div class="clearfix"></div>
+</div>
+
 {% endblock %}
 
 {% block title %}
