Adicionado o admin de produtos

--- a/views/cart.html
+++ b/views/cart.html
@@ -5,15 +5,15 @@
   <div class="col-8 p-5">
     <div class="jumbotron">
       <h6 class="display-4">Olá, para prosseguir digite seu e-mail e senha para entrar</h6>
-      <form class="mt-5" action="index.html" method="post">
+      <form class="mt-5" method="post">
         <div class="row">
           <div class="col-5">
-            <input type="email" required name="" value="" class="form-control" placeholder="email@email">
+            <input type="email" required name="email" id="email" value="" class="form-control" placeholder="email@email">
           </div>
         </div>
         <div class="row">
           <div class="col-5 mt-4">
-            <input type="password" required placeholder="senha" name="" value="" class="form-control">
+            <input type="password" required placeholder="senha" name="password" id="password" value="" class="form-control">
           </div>
         </div>
         <div class="row">
