--- a/views/products.html
+++ b/views/products.html
@@ -1,18 +1,23 @@
 {% extends './layouts/base.html' %}
 
 {% block content %}
-  <h1 class="display-4 text-center">Produtos</h1>
-  <hr />
-  <ul class="products">
-    {% for item in products %}
-    <li>
-      <p>{{ item.name }}</p>
-      <p>{{ item.price.toLocaleString('pt-BR', { minimumFractionDigits: 2 , style: 'currency', currency: 'BRL' }) }}</p>
-      <a href="/product/{{ item.id }}" class="btn btn-outline-dark btn-block btn-sm">Ver mais</a>
-    </li>
-    {% endfor %}
-  </ul>
-  <div class="clearfix"></div>
+  {% for category in categories %}
+    {% if category.products | length > 0 %}
+      <h4 class="display-4 text-center"> {{ category.name }} </h4>
+      <hr>
+      <ul class="products">
+        {% for item in category.products %}
+        <li>
+          <p>{{ item.name }}</p>
+          <p>{{ item.price.toLocaleString('pt-BR', { minimumFractionDigits: 2 , style: 'currency', currency: 'BRL' }) }}</p>
+          <a href="/product/{{ item.id }}" class="btn btn-outline-dark btn-block btn-sm">Ver mais</a>
+        </li>
+        {% endfor %}
+      </ul>
+      <div class="clearfix"></div>
+    {% endif %}
+  {% endfor %}
+
 {% endblock %}
 
 {% block title %}
