--- a/views/index.html
+++ b/views/index.html
@@ -25,7 +25,7 @@
 </div>
 {% endblock %}
 {% block title %}
-  Pagina inicial
+  Pagina inicial - Site Artur
 {% endblock %}
 {% block script %}
   <script src="/js/index.js" charset="utf-8"></script>
